# MailClient

./: .gitignore  CMakeLists.txt  File.cpp  File.h  Mail.cpp  Mail.h  MailClient.cpp  MailClient.h  Makefile  Pop3Client.cpp  Pop3Client.h  README.md  SmtpClient.cpp  SmtpClient.h  attachment1.txt  attachment2.txt  config.json  mailClient  main.cpp  test.cpp  test.txt
downloads/: qlbongda.sql
